--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.slick-dots li button:before {
+  color: white;
+}
+.slick-dots li.slick-active button:before {
+  opacity: .75;
+  color: white;
+}
