--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,7 @@ html {
   --imp-text-color: #fd6969;
 }
 
-.purple {
+.custom_color {
   color: var(--imp-text-color) !important;
 }
 
@@ -32,7 +32,7 @@ button:focus {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background-color: #280b0b;
+  background-color: #352222;
   background-image: url(./Assets/pre.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -304,6 +304,14 @@ button:focus {
 .myAvtar {
   justify-content: center !important;
   padding-top: 9em !important;
+}
+.myAvtar2 {
+  border-radius: 45px;
+  width: 70%;
+}
+.myAvtar3 {
+  border-radius: 45px;
+  width: 70%;
 }
 
 @media (max-width: 767px) {
@@ -737,4 +745,23 @@ button:focus {
 }
 .fork-btn-inner::after {
   display: none !important;
+}
+
+.slick-slide {
+  text-align: -webkit-center !important;
+}
+
+.container-slide{
+  height: 500px;
+            line-height: 500px;
+            text-align: center;
+            background: darkgrey;
+}
+
+
+.img-slide{
+  display: inline-block;
+            vertical-align: middle;
+            max-width: 100%;
+            max-height: 100%;
 }
