--- a/src/style.css
+++ b/src/style.css
@@ -560,12 +560,11 @@ button:focus {
   margin: 15px !important;
   padding: 10px !important;
   opacity: 0.93 !important;
-  border: 1.7px solid rgba(255, 255, 255, 0.637) !important;
+  border: 1.7px solid rgba(230, 112, 112, 0.597) !important;
   vertical-align: middle !important;
   text-align: center !important;
   border-radius: 5px !important;
   display: table !important;
-  box-shadow: 2px 2px 2px 2px var(--imp-text-color) !important;
   overflow: hidden !important;
   transition: all 0.4s ease 0s !important;
 }
@@ -577,9 +576,7 @@ button:focus {
 }
 
 .tech-icons:hover {
-  transform: scale(1.05) !important;
-  overflow: hidden !important;
-  border: 2.2px solid rgba(255, 255, 255, 0.883) !important;
+  border: 2.2px solid rgba(255, 255, 255) !important;
 }
 .tech-icon-images {
   padding: 20px !important;
@@ -764,4 +761,8 @@ button:focus {
             vertical-align: middle;
             max-width: 100%;
             max-height: 100%;
+}
+
+.col-lg-3{
+width: 20% !important;
 }
