--- a/src/style.css
+++ b/src/style.css
@@ -465,7 +465,7 @@ button:focus {
 }
 
 .project-card-view {
-  box-shadow: 0 2px 2px 2px rgba(255, 231, 231, 0.459) !important;
+
   color: white !important;
   background-color: rgba(255, 255, 255, 0.258) !important;
   opacity: 0.9 !important;
@@ -473,9 +473,8 @@ button:focus {
   height: 100% !important;
 }
 .project-card-view:hover {
-  transform: scale(1.02) !important;
   overflow: hidden !important;
-  box-shadow: 0 4px 4px 5px rgba(255, 255, 255, 0.561) !important;
+  border-color: white;
 }
 
 .blog-card {
@@ -511,7 +510,7 @@ button:focus {
 
 .card-img-top {
   padding: 20px !important;
-  opacity: 0.8 !important;
+  margin-top: 20px;
   border-radius: 10px !important;
 }
 
