--- a/src/style.css
+++ b/src/style.css
@@ -769,3 +769,53 @@ button:focus {
 .col-lg-3{
 width: 20% !important;
 }
+
+.icon-bar {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+
+/* Style the icon bar links */
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 10px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 30px;
+}
+
+/* Style the social media icons with color, if you want */
+.icon-bar a:hover {
+  background-color: var(--imp-text-color);
+  background: var(--imp-text-color);
+}
+
+.instagram {
+  background: linear-gradient(115deg, #f9ce34, #ee2a7b, #6228d7);
+  color: white;
+}
+
+.github {
+  background: black;
+  color: white;
+}
+
+.google {
+  background: #dd4b39;
+  color: white;
+}
+
+.linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.youtube {
+  background: #bb0000;
+  color: white;
+}
