--- a/src/style.css
+++ b/src/style.css
@@ -639,6 +639,9 @@ button:focus {
     padding-right: 15px !important;
     padding-left: 15px !important;
   }
+  .icon-bar{
+    display: none !important;
+  }
 }
 .resume .resume-title {
   font-size: 2em;
@@ -805,17 +808,7 @@ width: 20% !important;
   color: white;
 }
 
-.google {
-  background: #dd4b39;
-  color: white;
-}
-
 .linkedin {
   background: #007bb5;
-  color: white;
-}
-
-.youtube {
-  background: #bb0000;
   color: white;
 }
